--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node seeds/seed.js"
+    "seed": "node seeds/seed.js",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "heroku-postbuild": "npm run db:migrate && npm run start"
   },
   "keywords": [],
   "author": "",
