--- a/migrations/config/config.json
+++ b/migrations/config/config.json
@@ -3,21 +3,21 @@
     "username": "root",
     "password": "amongus",
     "database": "techblog_db",
-    "host": "localhost",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "amongus",
     "database": "techblog_db",
-    "host": "localhost",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": "amongus",
     "database": "techblog_db",
-    "host": "localhost",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
