--- a/migrations/config/config.json
+++ b/migrations/config/config.json
@@ -1,15 +1,26 @@
 {
   "development": {
-    "use_env_variable": "DATABASE_URL",
+    "username": "root",
+    "password": "amongus",
+    "database": "techblog_db",
+    "host": "127.0.0.1",
+    "port": 3306,
     "dialect": "mysql"
   },
   "test": {
-    "use_env_variable": "DATABASE_URL",
+    "username": "root",
+    "password": "amongus",
+    "database": "techblog_db",
+    "host": "127.0.0.1",
+    "port": 3306,
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "DATABASE_URL",
+    "username": "root",
+    "password": "amongus",
+    "database": "techblog_db",
+    "host": "127.0.0.1",
+    "port": 3306,
     "dialect": "mysql"
-  },
-  "DATABASE_URL": "mysql://gmm7zinl88z3c3i7:l7enmpc8x3ga3uku@w3epjhex7h2ccjxx.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ewiy80kzh84362gt"
+  }
 }
